Improve additional Alexander's reccomendations

--- a/submissions/CuteShaun/popup-menu/index.html
+++ b/submissions/CuteShaun/popup-menu/index.html
@@ -212,7 +212,7 @@
         method="GET"
       >
         <input class="search__text-input" type="text" /><input
-          class="search__button-input"
+          class="search__button-input search__button-input--duckduckgo-style"
           type="submit"
           value="S"
         />
