--- a/submissions/linkqwd/html-css-practice/src/index.html
+++ b/submissions/linkqwd/html-css-practice/src/index.html
@@ -1,126 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Google pop-up menu</title>
+    <meta name="description" content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<title>Google pop-up menu</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body class="layout">
-	<ul class="menu">
-		<li class="menu__item">
-			<a class="menu__link" href="#">Gmail</a></li>
-		<li class="menu__item">
-			<a class="menu__link" href="#">Images</a></li>
-		<li class="menu__item menu__item_type_apps">
-			<div class="toggle">
-				<input type="checkbox" id="toggle-apps" class="toggle__drop-down">
-				<label for="toggle-apps" class="toggle__label"></label>
-				<div class="toggle__content-wrapper">
-					<ul class="apps">
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_docs" href="#">Docs</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_translate" href="#">Translate</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_google" href="#">Google+</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_search" href="#">Search</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_youtube" href="#">YouTube</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_play" href="#">Play</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_gmail" href="#">Gmail</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_drive" href="#">Drive</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_calendar" href="#">Calendar</a>
-						</li>
-						<li class="apps__item">
-							<a class="apps__link apps__link_icon_bussiness" href="#">My Bussiness</a>
-						</li>
-						<input type="checkbox" id="toggle-more" class="toggle__input-more">
-						<label for="toggle-more" class="toggle__show-more">More</label>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_blogger" href="#">Blogger</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_photos" href="#">Photos</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_maps" href="#">Maps</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_account" href="#">Account</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_contacts" href="#">Contacts</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_hangouts" href="#">Hangouts</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_keep" href="#">Keep</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_jamboard" href="#">Jamboard</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_classroom" href="#">Classroom</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_earth" href="#">Earth</a>
-						</li>
-						<li class="apps__item apps__item_state_hidden">
-							<a class="apps__link apps__link_icon_collections" href="#">Collections</a>
-						</li>
-						<div class="toggle__hidden-block-wrap">
-							<a class="apps__all-apps-link" href="#">Even more from Google</a>
-						</div>
-					</ul>
-				</div>
-				<span class="menu__item-decoration-triangle"></span>
-			</div>
-		</li>
-		<li class="menu__item menu__item_type_bell">
-			<div class="toggle">
-				<input type="checkbox" id="toggle-bell" class="toggle__drop-down">
-				<label for="toggle-bell" class="toggle__label"></label>
-				<div class="toggle__content-wrapper menu__drop-down">
-					<h2>This is bell wrapper</h2><br>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, et quaerat quia beatae, eveniet nihil quasi
-						perspiciatis suscipit expedita provident consequuntur possimus minus adipisci tenetur sunt similique. Explicabo,
-						enim blanditiis.</p>
-				</div>
-				<span class="menu__item-decoration-triangle"></span>
-			</div>
-		</li>
-		<li class="menu__item menu__item_type_profile">
-			<div class="toggle">
-				<input type="checkbox" id="toggle-profile" class="toggle__drop-down">
-				<label for="toggle-profile" class="toggle__label"></label>
-				<div class="toggle__content-wrapper menu__drop-down">
-					<h2>This is profile wrapper</h2><br>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam, et quaerat quia beatae, eveniet nihil quasi
-						perspiciatis suscipit expedita provident consequuntur possimus minus adipisci tenetur sunt similique. Explicabo,
-						enim blanditiis.</p>
-				</div>
-				<span class="menu__item-decoration-triangle"></span>
-			</div>
-		</li>
-	</ul>
-</body>
-
+  <body class="layout">
+    <ul class="menu">
+      <li class="menu__item">
+        <a class="menu__link" href="#">Gmail</a>
+      </li>
+      <li class="menu__item">
+        <a class="menu__link" href="#">Images</a>
+      </li>
+      <li class="menu__item menu__item_type_apps">
+        <div class="toggle">
+          <input type="checkbox" id="toggle-apps" class="toggle__drop-down" />
+          <label for="toggle-apps" class="toggle__label"></label>
+          <div class="toggle__content-wrapper">
+            <ul class="apps">
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_docs" href="#">Docs</a>
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_translate" href="#"
+                  >Translate</a
+                >
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_google" href="#"
+                  >Google+</a
+                >
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_search" href="#">Search</a>
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_youtube" href="#"
+                  >YouTube</a
+                >
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_play" href="#">Play</a>
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_gmail" href="#">Gmail</a>
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_drive" href="#">Drive</a>
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_calendar" href="#"
+                  >Calendar</a
+                >
+              </li>
+              <li class="apps__item">
+                <a class="apps__link apps__link_icon_bussiness" href="#"
+                  >My Bussiness</a
+                >
+              </li>
+              <input
+                type="checkbox"
+                id="toggle-more"
+                class="toggle__input-more"
+              />
+              <label for="toggle-more" class="toggle__show-more">More</label>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_blogger" href="#"
+                  >Blogger</a
+                >
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_photos" href="#">Photos</a>
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_maps" href="#">Maps</a>
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_account" href="#"
+                  >Account</a
+                >
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_contacts" href="#"
+                  >Contacts</a
+                >
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_hangouts" href="#"
+                  >Hangouts</a
+                >
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_keep" href="#">Keep</a>
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_jamboard" href="#"
+                  >Jamboard</a
+                >
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_classroom" href="#"
+                  >Classroom</a
+                >
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_earth" href="#">Earth</a>
+              </li>
+              <li class="apps__item apps__item_state_hidden">
+                <a class="apps__link apps__link_icon_collections" href="#"
+                  >Collections</a
+                >
+              </li>
+              <div class="toggle__hidden-block-wrap">
+                <a class="apps__all-apps-link" href="#"
+                  >Even more from Google</a
+                >
+              </div>
+            </ul>
+          </div>
+          <span class="menu__item-decoration-triangle"></span>
+        </div>
+      </li>
+      <li class="menu__item menu__item_type_bell">
+        <div class="toggle">
+          <input type="checkbox" id="toggle-bell" class="toggle__drop-down" />
+          <label for="toggle-bell" class="toggle__label"></label>
+          <div class="toggle__content-wrapper menu__drop-down">
+            <h2>This is bell wrapper</h2>
+            <br />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam,
+              et quaerat quia beatae, eveniet nihil quasi perspiciatis suscipit
+              expedita provident consequuntur possimus minus adipisci tenetur
+              sunt similique. Explicabo, enim blanditiis.
+            </p>
+          </div>
+          <span class="menu__item-decoration-triangle"></span>
+        </div>
+      </li>
+      <li class="menu__item menu__item_type_profile">
+        <div class="toggle">
+          <input
+            type="checkbox"
+            id="toggle-profile"
+            class="toggle__drop-down"
+          />
+          <label for="toggle-profile" class="toggle__label"></label>
+          <div class="toggle__content-wrapper menu__drop-down">
+            <h2>This is profile wrapper</h2>
+            <br />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam,
+              et quaerat quia beatae, eveniet nihil quasi perspiciatis suscipit
+              expedita provident consequuntur possimus minus adipisci tenetur
+              sunt similique. Explicabo, enim blanditiis.
+            </p>
+          </div>
+          <span class="menu__item-decoration-triangle"></span>
+        </div>
+      </li>
+    </ul>
+  </body>
 </html>
