Fix popup styling

--- a/submissions/o-msh/popup/index.html
+++ b/submissions/o-msh/popup/index.html
@@ -20,7 +20,7 @@
                     <a href="#" class="nav__link">Images</a>
                 </li>
                 <li class="nav__item nav-apps">
-                    <input type="checkbox" class="nav-apps__input" id="nav-apps__input" />
+                    <input type="checkbox" class="nav-apps__input visually-hidden" id="nav-apps__input" />
                     <label for="nav-apps__input" class="nav__item_icon_apps nav-apps__label"></label>
                     <div class="nav-apps__wrapper">
                         <ul class="app">
@@ -96,7 +96,7 @@
                                     <span>Hangouts</span>
                                 </a>
                             </li>
-                            <input type="checkbox" class="app__input-more" id="app__input-more" />
+                            <input type="checkbox" class="app__input-more visually-hidden" id="app__input-more" />
                             <label for="app__input-more" class="app__label-more">More</label>
                             <hr class="app-more__divider">
                             <div class="app-more__wrapper">
