fixes after comments

--- a/submissions/OlgaDubynka/popup/src/index.html
+++ b/submissions/OlgaDubynka/popup/src/index.html
@@ -162,7 +162,7 @@
                 </a>
               </li>
           </ul>
-          <input id='input-more' class="input-more" type="checkbox" name="input-more" value="">
+          <input id='input-more' class="input-more visually-hidden" type="checkbox" name="input-more" value="">
           <label for="input-more" class="btn-more">More
           </label>
           <span class="line"></span>
@@ -264,3 +264,4 @@
     </div>
 </body>
 </html>
+
