Add new changes

--- a/submissions/MitchfFirstGit/Pop-up/index.html
+++ b/submissions/MitchfFirstGit/Pop-up/index.html
@@ -136,8 +136,8 @@
                     </div>
                 </div>
             </li>
-            <li class="bell"><a href="#"></a></li>
-            <li class="account"><a href="#">A</a></li>
+            <li class="bell-background"><a href="#" class="bell-icon"></a></li>
+            <li class="account-background"><a href="#" class="account-icon">A</a></li>
         </ul>
     </header>
 </body>
