--- a/submissions/CrazyPike/htmlcsspopup/index.html
+++ b/submissions/CrazyPike/htmlcsspopup/index.html
@@ -44,11 +44,10 @@
     </div>
     </form>
     </div>
-
     <div class="menu__item menu__notification-item" tabindex="0">
     </div>
     <div class="menu__item menu__account-item" tabindex="0">A
-    </div>>
+    </div>
 </nav>
 </body>
 </html>
