--- a/submissions/CrazyPike/htmlcsspopup/index.html
+++ b/submissions/CrazyPike/htmlcsspopup/index.html
@@ -48,7 +48,7 @@
     <div class="menu__item menu__notification-item" tabindex="0">
     </div>
     <div class="menu__item menu__account-item" tabindex="0">A
-    </div>>
+    </div>
 </nav>
 </body>
 </html>
